Add JUnit tests for Coleccion class